omni/tests/goldens/types/undefined_ident_13.err
tests/goldens/types/undefined_ident_13.omni:1:20: error: undefined identifier "missing13"
  let result13:int = missing13
                     ^~~ hint: declare the name before using it
